--- a/package.json
+++ b/package.json
@@ -1,5 +1,17 @@
 {
   "dependencies": {
-    "node-telegram-bot-api": "^0.63.0"
-  }
+    "node-telegram-bot-api": "^0.63.0",
+    "nodemon": "^3.0.1"
+  },
+  "name": "programming-project",
+  "description": "- [ ] сделать пути универсальными для всех OC \r     - [ ] определтель ОС на сервере?\r - [x] внедрить функцию “создания папки”\r - [ ] запуск бота для обращения\r     - [x] стартовый вариант, приветствие\r     - [x] ввод команд\r     - [x] вывод списока сообществ\r     - [x] обработка списка сообществ\r     - [ ] настройка взаимодействия с ботов вк\r     - [ ] др функционал\r - [ ] выводить данные с какого по какое число отчет “с ** по **”\r     - [ ] запрос времени создания файла\r     - [ ] запрос текущего времени\r     - [ ] вывод этих данных в консоль\r - [ ] хранение базы данных подписчиков от нескольких сообществ\r     - [ ] создание базы данных для конкретного пользователя \r     - [ ] Отображение списка базы данных сообществ",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "dev": "nodemon index.js",
+    "start": "node index.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
